--- a/History.rdoc
+++ b/History.rdoc
@@ -1,10 +1,12 @@
-== NEXT / YYYY-MM-DD
+== 2.99 / 2015-11-DD
 
 * 1 governance change
 
   * This project now has a {Code of Conduct}[Code-of-Conduct_rdoc.html]
 
+* 1 major change
 
+  * Replaced deprecated fields for MIME types with fixed empty responses.
 
 == 2.6.2 / 2015-09-13
 
