--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,22 @@ MIME content type definitions. It can be used to determine defined filename
 extensions for MIME types, or to use filename extensions to look up the likely
 MIME type definitions.
 
+This is release 2.99, the deprecation version of mime-types 2.x, where
+deprecation warnings are noisy and data that has been deprecated is now no
+longer available. The data is both dropped from the data files and is stubbed
+out as empty or +nil+ values as appropriate.
+
+mime-types-2.6 was the last version of mime-types 2.x with newly available
+features, and mime-types 2.99 will only receive quarterly updates to the IANA
+registered MIME media types plus any security updates that may be required.
+
+If the loss of the deprecated data matters, be sure to set your dependency
+appropriately:
+
+   gem 'mime-types', '~> 2.6, < 2.99'
+
+=== About MIME Media Types
+
 MIME content types are used in MIME-compliant communications, as in e-mail or
 HTTP traffic, to indicate the type of content which is transmitted. The
 mime-types library provides the ability for detailed information about MIME
@@ -25,51 +41,21 @@ recommendations, the {IANA Media Types
 registry}[https://www.iana.org/assignments/media-types/media-types.xhtml], and
 user contributions. It conforms to RFCs 2045 and 2231.
 
-This is release 2.6 with two new experimental features. The first new feature
-is a new default registry storage format that greatly reduces the initial
-memory use of the mime-types library. This feature is enabled by requiring
-+mime/types/columnar+ instead of +mime/types+ with a small performance cost and
-no change in *total* memory use if certain methods are called (see {Columnar
-Store}[#label-Columnar+Store]). The second new feature is a logger interface
-that conforms to the expectations of an ActiveSupport::Logger so that warnings
-can be written to an application's log rather than the default location for
-+warn+. This interface may be used for other logging purposes in the future.
-
-mime-types 2.6 is the last planned version of mime-types 2.x, so deprecation
-warnings are no longer cached but provided every time the method is called.
-mime-types 2.6 supports Ruby 1.9.2 or later.
-
 === mime-types 1.x End of Life
 
-mime-types 2.0 was released in late 2013, and as of early 2015 there have been
-no reported security issues for mime-types 1.x. With the release of mime-types
-2.5, I set the formal End of Life for mime-types 1.x for 2015-10-27 (the second
-anniversary of the release of mime-types 2.0). After this date, absolutely no
-pull requests for mime-types 1.x will be accepted.
+mime-types 1.x has reached end of life and is no longer supported as of
+2015-10-27 and will receive no updates at all.
 
-=== mime-types Future
+=== mime-types 2.x End of Life
 
-There are a number of issues open that make clear to me that there are some
-fundamental changes that need to happen to both the data representation and the
-API provided by mime-types. This cannot happen under the current release, so
-all new development is focussing on an upcoming 3.0 release. The target for the
-release is on or before the beginning of RubyConf 2015 (2015-11-15).
+mime-types 2.x is supported as 2.99.x receiving quarterly updates of the IANA
+registry and security updates for two years. It will reach full end of life on
+2017-11-21.
 
-When 3.0 is released, mime-types 2.x will receive regular updates of the IANA
-registry for two years following the release. It will also receive security
-updates, if needed, for the same period. There will be no further feature
-development on mime-types 2.x following the 3.0 release.
+=== mime-types 3.x
 
-Coincident with the 3.0 release, I will release mime-types 2.99.0 that no
-longer imports the data to fields that have been deprecated, or exports it if
-it is present. If they work because they derive data from the data that is
-still present, the will continue to work. The quarterly updates will be against
-2.99.x.
-
-If the possible loss of this deprecated data matters, be sure to set your
-dependency appropriately:
-
-   gem 'mime-types', '~> 2.6, < 2.99'
+Users are encouraged to upgrade to mime-types 3.x as soon as is practical.
+mime-types 3.x requires Ruby 2.0 compatibility and a simpler licensing scheme.
 
 == Synopsis
 
@@ -111,9 +97,9 @@ files). A MIME::Type stores the known information about one MIME type.
    puts text.like?(MIME::Type.new('x-text/x-plain')) # => true
 
    puts text.xrefs.inspect # => { "rfc" => [ "rfc2046", "rfc3676", "rfc5147" ] }
-   puts text.urls # => [ "http://www.iana.org/go/rfc2046",
-                  #      "http://www.iana.org/go/rfc3676",
-                  #      "http://www.iana.org/go/rfc5147" ]
+   puts text.xref_urls # => [ "http://www.iana.org/go/rfc2046",
+                       #      "http://www.iana.org/go/rfc3676",
+                       #      "http://www.iana.org/go/rfc5147" ]
 
    xtext = MIME::Type.new('x-text/x-plain')
    puts xtext.media_type # => 'text'
@@ -136,14 +122,14 @@ files). A MIME::Type stores the known information about one MIME type.
 
 === Columnar Store
 
-mime-types 2.6 has an experimental columnar storage format that reduces the
-default memory footprint. It does this by selectively loading data. When a
+mime-types 2.6 introduced an experimental columnar storage format that reduces
+the default memory footprint. It does this by selectively loading data. When a
 registry is first loaded from a columnar store, only the canonical MIME type
 and registered extensions will be loaded and the MIME type will be connected to
-its registry. When extended data is required (including #registered, #obsolete,
-#use_instead), that data is loaded from its own column file for all types in
-the registry. This load is done with a Mutex to ensure that the types are
-updated safely in a multithreaded environment.
+its registry. When extended data is required (including +registered+,
++obsolete+, and +use_instead+), that data is loaded from its own column file
+for all types in the registry. This load is done with a Mutex to ensure that
+the types are updated safely in a multithreaded environment.
 
 Columnar storage is slated to become the default storage format for mime-types
 3.0, but until that is released, the default is still to use the JSON storage
