--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+== 2.99.1 / 2016-02-21
+
+* Data release. This release reflects only updates to the embedded MIME type
+  data on the specified quarterly schedule.
+
 == 2.99 / 2015-11-21
 
 * 1 governance change
