mime-types 2.99.2: data release
- Update to Contributor Covenant 1.4.
- Fix some small documentation issues.
- Also updates some release-software tooling.

--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -165,5 +165,6 @@ Thanks to everyone else who has contributed to mime-types:
 * Richard Hirner
 * Richard Hurt
 * Richard Schneeman
+* Tao Guo
 * Tibor Szolár
 * Todd Carrico
